# slo-toolkit

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: docker.yml  tests.yml
docs/: PATTERNS.md
examples/: payments-api.yml
src/slo_toolkit/: cli.py  grafana.py  prometheus.py  spec.py
tests/: test_cli.py  test_grafana.py  test_prometheus.py  test_spec.py
