[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slo-toolkit"
version = "0.1.0"
description = "Generate Prometheus rules + Grafana dashboards from a YAML SLO spec. Multi-window multi-burn-rate alerts, ready to drop into your repo."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Santiago Arteta" }]
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
slo-toolkit = "slo_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
